--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,12 @@
 name: Run Tests
 on:
   workflow_call:
+
+permissions:
+  contents: read
+  pull-requests: read
+  checks: write
+
 jobs:
   pre-commit-check:
     runs-on: ubuntu-latest
@@ -10,6 +16,7 @@ jobs:
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: --config .github/lint/precommit-ci.yaml
+
   golangci-lint:
     runs-on: ubuntu-latest
     steps:
@@ -27,10 +34,11 @@ jobs:
           go version
           go mod tidy
           git diff --exit-code
-      - uses: golangci/golangci-lint-action@v2
+      - uses: golangci/golangci-lint-action@v3
         with:
           version: v1.51.2
           args: --timeout 5m --config .github/lint/golangci.yaml
+
   go-tests:
     runs-on: ubuntu-latest
     steps:
