--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -7,4 +7,8 @@ on:
       - main
 jobs:
   tests:
+    permissions:
+      contents: read
+      pull-requests: read
+      checks: write
     uses: ./.github/workflows/tests.yaml
