--- a/.github/lint/golangci.yaml
+++ b/.github/lint/golangci.yaml
@@ -1,5 +1,8 @@
 run:
   timeout: 3m
+  skip-dirs:
+    - internal/ent
+    - internal/graph/generated
 linters:
   # https://golangci-lint.run/usage/linters/#enabled-by-default
   enable:
@@ -16,3 +19,4 @@ linters:
     # - gofmt
     # - goconst
     # - revive
+
