Add go mod tidy to renovate
Signed-off-by: Russell Troxel <russell.troxel@segment.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,6 +26,10 @@
   "assignees": ["rtrox"],
   "assignAutomerge": true,
   "labels": ["dependencies"],
+  "postUpdateOptions": [
+    "gomodTidy",
+    "gomodUpdateImportPaths",
+  ]
   "packageRules": [
     // add labels according to package and update types
     {
