Add Dockerfile and Docker Build automation
Signed-off-by: Russell Troxel <russell@troxel.io>

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -12,3 +12,10 @@ jobs:
       pull-requests: read
       checks: write
     uses: ./.github/workflows/tests.yaml
+
+  build-and-push:
+    needs: tests
+    uses: ./.github/workflows/docker-image.yaml
+    with:
+      push: true
+      suffix: -dev
