Working GraphQL Implementation
Signed-off-by: Russell Troxel <russell.troxel@segment.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,31 +5,48 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build-watch": "tsc && vite build --watch",
     "build": "tsc && vite build",
+    "watch-all": "concurrently \"pnpm build-watch\" \"pnpm generate -- --watch\"",
+    "generate": "pnpm graphql-codegen",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.12.12",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@tanstack/react-query": "^5.18.1",
+    "@tanstack/react-router": "^1.15.13",
+    "@tanstack/router-cli": "^1.15.10",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.6.0",
+    "unstated-next": "^1.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tanstack/router-devtools": "^1.12.13",
-    "@tanstack/router-vite-plugin": "^1.12.8",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@parcel/watcher": "^2.4.0",
+    "@tanstack/router-devtools": "^1.15.13",
+    "@tanstack/router-vite-plugin": "^1.15.11",
+    "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
