--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
+    "sass": "^1.70.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
